<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/editTextUrl"
                android:layout_width="312dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/enter_domain"
                android:inputType="textUri"
                android:layout_marginTop="100dp"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:text="@string/verify_ssl_certificate"
                android:layout_below="@id/editTextUrl"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:onClick="onVerifyButtonClick"
                />
            <TextView
                android:id="@+id/textViewDomain"
                android:layout_width="393dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_below="@id/buttonVerify"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="287dp"
                android:layout_height="40dp"
                android:layout_below="@id/textViewDomain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewResult"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp" />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>